@@ -4,7 +4,7 @@ Summary: 1-lepton and 2-lepton search for first or second generation leptoquarks
 Experiment: ATLAS
 Collider: LHC
 SpiresID: 9041966
-Status: UNVALIDATED
+Status: OBSOLETE
 Authors:
  - Angela Chen <aqchen@fas.harvard.edu>
 References:
@@ -15,8 +15,7 @@ NumEvents: 25000 for BSM signals
 Beams: [p+, p+]
 Energies: [7000]
 Description:
-  'Single and dilepton search for first and second generation scalar leptoquarks by ATLAS at 7 TeV. 
+  'Single and dilepton search for first and second generation scalar leptoquarks by ATLAS at 7 TeV.
   Event counts in four signal regions (single lepton and dilepton for first and second generation) are implemented as one-bin histograms.
-  Histograms for event transverse energy are implemented for dilepton signal regions and histograms for leptoquark mass are implemented for single lepton signal regions. 
+  Histograms for event transverse energy are implemented for dilepton signal regions and histograms for leptoquark mass are implemented for single lepton signal regions.
   Histograms for observables in six control regions are implemented.'
-
