@@ -4,7 +4,7 @@ Summary: Single lepton search for supersymmetry
 Experiment: ATLAS
 Collider: LHC
 SpiresID: 9212353
-Status: UNVALIDATED
+Status: OBSOLETE
 References:
  - Phys. Rev.D85:012006,2012
  - arXiv:1109.6606
