@@ -3,7 +3,7 @@ Year: 2012
 Summary: High jet multiplicity squark and gluino search
 Experiment: ATLAS
 Collider: LHC
-Status: UNVALIDATED
+Status: OBSOLETE
 Authors:
  - Peter Richardson <peter.richardson@durham.ac.uk>
 References:
