@@ -3,7 +3,7 @@ Year: 2012
 Summary: Search for supersymmetry at 8 TeV in final states with jets, missing transverse momentum and one lepton with the ATLAS detector.
 Experiment: ATLAS
 Collider: LHC
-Status: UNVALIDATED
+Status: OBSOLETE
 Authors:
  - Peter Richardson <Peter.Richardson@durham.ac.uk>
 References:
