@@ -3,7 +3,7 @@ Year: 2012
 Summary: Search for supersymmetry with 2 same-sign leptons, jets and missing transverse energy
 Experiment: ATLAS
 Collider: LHC
-Status: UNVALIDATED
+Status: OBSOLETE
 Authors:
  - Peter Richardson <Peter.Richardson@durham.ac.uk>
 References:
