@@ -4,7 +4,7 @@ Summary: Search for supersymmetry with diphotons and mising Transverse Momentum
 Experiment: ATLAS
 Collider: LHC
 InspireID: 946427
-Status: UNVALIDATED
+Status: OBSOLETE
 Authors:
  - Peter Richardson <Peter.Richardson@durham.ac.uk>
 References:
@@ -16,7 +16,7 @@ NumEvents: 25000 for BSM signals
 Beams: [p+, p+]
 Energies: [7000]
 Description:
-  'Search for diphoton events with large missing transverse momentum 
+  'Search for diphoton events with large missing transverse momentum
    with integrated luminosity 1.07$\text{fb}^{-1}$ at $\sqrt{s}=7$.
    No excess of events was observed.'
 BibKey: Aad:2011zj
