@@ -129,6 +129,19 @@ if ENABLE_PRELIMINARY
 RivetATLASAnalyses_la_SOURCES += \
     ATLAS_2012_CONF_2012_001.cc
 endif
+if ENABLE_OBSOLETE
+RivetATLASAnalyses_la_SOURCES += \
+    ATLAS_2010_CONF_2010_049.cc \
+    ATLAS_2011_S9041966.cc \
+    ATLAS_2011_CONF_2011_090.cc \
+    ATLAS_2011_CONF_2011_098.cc \
+    ATLAS_2011_S9212353.cc \
+    ATLAS_2012_CONF_2012_103.cc \
+    ATLAS_2012_CONF_2012_104.cc \
+    ATLAS_2012_CONF_2012_105.cc \
+    ATLAS_2012_CONF_2012_109.cc \
+    ATLAS_2012_I946427.cc
+endif
 if ENABLE_UNVALIDATED
 RivetATLASAnalyses_la_SOURCES += \
     ATLAS_2010_CONF_2010_049.cc \
